Bruke samme sikkerhetsregime for servicebruker og ad